--- a/css/filtro_busqueda.css
+++ b/css/filtro_busqueda.css
@@ -43,20 +43,21 @@ a{
     font-size: 1.2em;
     color:  rgb(68, 67, 67);
 }
-.icono:hover{
-   font-size: 1.3em;
+.icono:hover,img:hover{
+   
    cursor: pointer;
 }
 .img-cmr{
-    padding-top: 5px;
+    padding-top: 4px;
     width: 40px;
-    height: 40px;
+    
  /*    padding: 15px 2px; */
  /*    height: 70px; */
 }
 .img-logo{
     width: 350px;
-    padding: 10px 50px;
+    padding: 8px 40px;
+    
 }
 .div-busqueda{
     width: 450px;
@@ -64,14 +65,16 @@ a{
     border-radius: 7px;
     font-size: 1em;
     border: 0.5px solid gray ;
-    margin: 20px;
+   /*  margin: 20px; */
 }
 .lupa{
-    position: absolute;
+   /*  position: absolute;
     top: 37%;
-    right:43%;
+    right:43%; */
     font-size: 1.2em; 
     z-index: 2;
+    color:  rgb(68, 67, 67);
+    padding: 0 20px;
 }
 .lupa:hover{
     cursor: pointer;
@@ -79,8 +82,18 @@ a{
 .img-logo-Jn{
     display: none;
 }
+.Hamburguer{
+    display: none;
+}
+
+
 
 @media only screen and (max-width:1300px){
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
     /* .menu{
         background-color: brown;
     } */
@@ -88,16 +101,28 @@ a{
         display: none; 
     }
     .img-logo{
-        display: none;
+      
+       display: none; 
     }
     .img-logo-Jn{
         display: flex;
-        width: 190px;
-        padding: 5px 50px;
+        width: 120px;
+        padding: 5px 30px;
+    }
+    .menu-Busqueda{
+        
+        padding: 20px;
+        position: fixed;
+       /*  top: 16%; */
+        border-bottom: 1px solid black;
+        width: 100%;
+        height: 100px;
+        display: none;
+           
+        
     }
     .lupa{
-        top: 47%;
-        right: 35%;
+        padding: 0 20px 0 10px;
     }
     .icono{
         margin: 20px;
@@ -106,14 +131,101 @@ a{
     .div-busqueda{
         padding: 7px 3px;
     }
+   
+    .Hamburguer{
+        visibility: hidden;
+    }
 }
 @media only screen and (max-width:968px){
-    .menu{
-        background-color: rgb(42, 165, 91);
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+    }
+    .div-busqueda{
+        display: none;
+    }
+    .img-logo-Jn{
+        width: 120px;
+               
+    }
+    .Hamburguer{
+        visibility: inherit;
+        font-size: 1.5em;
+        color:  rgb(68, 67, 67);
+        padding: 0 90px 0 0px;
+    }
+    .menu-Busqueda{
+        padding: 20px;
+       
+       /*  top: 16%; */
+        border-bottom: 1px solid black;
+        width: 100%;
+        height: 100px;
+        display: flex;
+        
+    }
+    .position{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .menu-Busqueda-Inactivo{
+        display: none;
+       
+    }
+    .menu-inactivo{
+        display: none;
+    }
+    .lupa2{
+        text-align: left;
+        font-size: 1.5em;
+        padding: 0 90px 0 20px;
+        color:  rgb(68, 67, 67);;
+    }
+    .text{
+        width: 100%;
+        height: 30px;
+        padding: 2px; 
+        text-align: center;
+        border-radius: 12px;
+        outline:none;
+        border: 1px solid black;
+    }
+    .equis{
+        text-align: right;
+        font-size: 1,5em;
+        margin-right: 10px;
+        color:  rgb(68, 67, 67);
+        padding: 0 50px 0 100px;
+       
     }
 }
 @media only screen and (max-width:600px){
-    .menu{
-        background-color: rgb(165, 42, 122);
+   
+    .img-logo-Jn{
+        width: 100px;     
+    }
+    .Hamburguer{
+        visibility: inherit;
+        font-size: 1.5em;
+        color:  rgb(68, 67, 67);
+        padding: 0 40px 0 10px;
+    }
+    .icono{
+        font-size: 1.1em;
+    }
+    .img-cmr{
+        width: 30px;
+    }
+    .lupa2{
+        font-size: 1.2em;
+        padding: 0 30px 0 10px;
+    }
+    .equis{
+        font-size: 1,2em;
+        color:  rgb(68, 67, 67);
+        padding: 0 10px 0 40px;
     }
 }
