--- a/css/style.css
+++ b/css/style.css
@@ -11,17 +11,37 @@ body{
 nav{
     background-color: #023859;
     width: 100%;
+    height: 7.5vh;
+
+    
+}
+.iconos{
+    padding-right: 5px;
 }
 ul{
+    width: 100%;
     list-style: none;
     text-align: right;
 }
 li{
     display: inline-block;
     position: relative;
+    height: 7vh;
+}
+.logo_mimi{
+    width: 3%;
+    border-radius: 12%;
+   padding: 5px;
+    position: absolute ;
+    right: 90%;
+    filter: drop-shadow(10px 8px 6px #0a709c);
+   
+    
 }
 nav ul li:hover{
-    background-color: #4e7288;
+   /*  background-color: #4e7288; */
+   border: none;
+   border-bottom: 5px solid #4e7288 ;
    
 }
 nav ul li a{
@@ -51,18 +71,30 @@ nav ul li .children li a{
     display: block;
 }
 .box-center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin: auto;
-    margin-top: 20px;
     background: var(--color);
     aspect-ratio: 10/16;
     width: 400px;
-    height: 500px;
+    height: 550px;
     padding: 9px;
-    border-radius: 16px;
-    position: relative; 
+    border-radius: 16px; 
+}
+.title{
+    padding: 15px ;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2.5em;
+    font-family: 'Borel', cursive;
+    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Merriweather', serif;
+    color: rgb(241, 227, 208);
+}
+.home{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .cuerpo{
     background: var(--fondo);
@@ -73,22 +105,36 @@ nav ul li .children li a{
 .logo{
     margin: auto;
     margin-top: 20px;
-    width: 300px;
-    border-radius: 100%;
-    background-color: white;
+    width: 90%;
+    border-radius: 100px;
+    /* background-color: rgb(229, 226, 226); */
     display: flex;
     align-items: center;
     justify-content: center;
 }
-h2{
+span{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 2em;
-    font-size: 900;
+    display:block;
+    padding-left:15% ;
+    padding-top: 30px;
     color: rgb(241, 227, 208);
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
-    text-align: center;
+    font-size: 2em;
+    border-right: 4px solid;
+    white-space: nowrap;
+    width: 18ch;
+    animation: typing 5s steps(25) infinite, blink 0.5s infinite step-end alternate;
+    overflow: hidden;
+}
+@keyframes typing {
+    from{
+        width: 0%;
+    }
+    
+}
+@keyframes blink{
+    50%{
+        border-color: transparent;
+    }
 }
 button{
     background-color: #1d78b0;
@@ -100,6 +146,7 @@ button{
     border-radius: 26px;
     height: 50px;
     width: 100px;
+    color: white; 
 }
 button{
     display: flex;
@@ -109,7 +156,7 @@ button{
     width: 150px;
     height: 60px;
     background-color:#011826;
-    color: white;
+    color: white; 
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
     font-weight: bolder;
@@ -131,11 +178,13 @@ button::after{
     left: 0;
     z-index: 1;
     transition: .3s ease-in-out all;
+    color: white; 
 }
 
 button a{
     position: relative;
     z-index: 2;
+    color: white;
     transition: .3s ease all;
     text-decoration: none;
 }
