--- a/css/filtro_busqueda.css
+++ b/css/filtro_busqueda.css
@@ -85,59 +85,58 @@ a{
 .Hamburguer{
     display: none;
 }
-.form-ana{
+.form-ana {
     position: fixed;
-    width: 406px;
     right: 20px;
     height: 100vh;
     top: 0;
+    width: 406px;
     display: grid;
-    grid-template:"frm-header" 70px
-                  "frm-body"minmax(150px,80vh)
-                  "frm-input" 60px
-                  "frm-exit"100px/
-                  406px;
+    grid-template: "frm-header" 70px
+                   "frm-body"  minmax(150px, 90vh)
+                   "frm-input" 60px
+                   "frm-exit" 80px/
+                    406px;     
 }
 .form-header{
     grid-area: frm-header;
     background-color: rgb(0, 114, 206);
     display: flex;
     flex-direction: row;
-
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 .img-ana-1{
     width: 60px;
     height: 65px;
-    margin-top:5px;
-    margin-left: 5px;
+    margin-top:7px;
+    margin-left: 7px;
 }
 .img-ana-2{
     width: 100px;
-    height: 95px;
     /* margin-top:5px;
     margin-left: 5px; */
 }
 .title-form{
     font-family: poppins;
     font-size: 1.2em;
-    font-weight: 500;
+    font-weight: 400;
     margin-left: 30px;
     color: white;
+    height: 70px;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
-.form-body{
+.form-body {
     grid-area: frm-body;
     background-color: rgb(234,238,243);
     display: grid;
-    grid-template: "empty-left  form-text empty-right"
-                    "empty-left slider    empty-right"/
-                       50px        1fr        40px; 
+    grid-template: "empty-left      form-text       empty-right"
+                   "icons-slider    icons-slider    icons-slider"  125px /
+                    50px            1fr              40px;
 }
 .form-text{
     grid-area: form-text;
-    background-color: darkcyan;
     margin-top: 5px;
     font-size: 0.9em;
 }
@@ -145,12 +144,14 @@ a{
 .form-input{
     grid-area: frm-input;
     background-color: rgb(234,238,243);
-    border-bottom-left-radius:10px;
+    border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    border-top: 2px solid rgb(0, 114, 206);
-    display: flex;
+    border-top: 2px solid rgb(0,114,206);
+    display:flex;
     justify-content: space-between;
     align-items: center;
+
+
 }
 .input-text{
     margin-left: 20px;
@@ -186,46 +187,121 @@ a{
 
 .text-opciones{
     background-color: white;
+    width: 250px;
     border-radius: 5px;
     padding: 10px;
+    letter-spacing: 0.08em;
 }
 .texto-form-black{
     font-weight: 900;
     display: block;
     padding-top: 30px;
+    letter-spacing: 0.08em;
 }
 .rejomj{
     font-size: .7em;
     position: relative;
     bottom: 0;
-    left: 250px;
+    left: 180px;
 }
+.icons-slider{
+    grid-area: icons-slider;
+    display: grid;
+    grid-template: "box-icon-arrow-left box-main-slider box-icon-arrow-right" /
+                    50px                310px            50px;
+    position: fixed;
+    right: 15px;
+}
+.box-main-slider{
+    grid-area: box-main-slider;
+    width: 320px;
+    height: 15vh;
+    
+    overflow: hidden;
+    display: grid;
+    grid-area: "icon-arrow-left slider";
+}
+.box-icon-arrow-left {
+    grid-area: box-icon-arrow-left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box-icon-arrow-right {
+    grid-area: box-icon-arrow-right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.icon-arrow-left{
+    grid-area: icon-arrow-left;
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+    
+}
+.fa-chevron-left{
+    font-size: 1.6em;
+    color: rgb(0,93,173);
+}
+.icon-arrow-right{
+    grid-area: icon-arrow-right;
+    background-color: white;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 20;
+}
+.fa-chevron-right{
+    font-size: 1.6em;
+    color: rgb(0,93,173);
+}
+
 .slider{
-    width: 100%;
-    background-color: red;
+   
     grid-area: slider;
     font-size: .9em;
+    height: 123px;
+    width: 325px; 
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     margin-top: 10px;
+    /* margin-left: 50px; */
+    flex-flow: column wrap;
+    /* flex-wrap: wrap; */
+    position: relative;   
 }
 .box-slider{
+    margin-bottom: 2px;
     background-color: white;
-    width: 250px;
+    width: 310px;
     height: 120px;
-    margin-right: 10px;
+    margin-left: 2px;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    
 }
 .slider-title{
     font-weight: 900;
-    font-size: 1.1em;
+    font-size: 1em;
     text-align: center;
-    margin-top: 5px;
-    color: rgb(0,93,173);
     margin: 10px;
+    color: rgb(0,93,173);
     letter-spacing: 0.05em;
-    word-spacing: 0.5em;
+    word-spacing: 0.2em;
 }
 .slider-text{
     font-size: .9em;
@@ -233,14 +309,30 @@ a{
     text-align: center;
     border-bottom: 1px solid grey;
     display: block;
-    margin-bottom: 5px;
+    padding-bottom: 15px;
 }
 .click-slider{
+    display: flex;
+    font-size: 1.2em;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    font-weight: 800;
+    text-align: center;
+    color:  rgb(0,93,173);
     font-weight: 400;
-
+  /*   margin-top: 10px */;
+    height: 400px;
 }
-
+.click-slider:hover{
+    background-color: rgb(172,185,255);
+    color: white;
+    border-radius: 0 0 10px 10px;
+}
+.num-slider{
+    background-color: brown;
+    width: 100%;
+}
 @media only screen and (max-width:1300px){
     *{
         padding: 0;
@@ -382,3 +474,53 @@ a{
         padding: 0 10px 0 40px;
     }
 }
+/* Fonts... */
+/* lato-100 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 100;
+    src: url('../fonts/lato-v24-latin-100.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* lato-300 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/lato-v24-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* lato-regular - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/lato-v24-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* poppins-300 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins-v20-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* poppins-regular - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v20-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* poppins-500 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/poppins-v20-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+
