--- a/Calculadora/css/calculator.css
+++ b/Calculadora/css/calculator.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-color: rgb(59,70,100);
+    background-color: rgb(59,70,100); 
     display: flex;
     justify-content: center;
     margin: auto;
@@ -19,7 +19,7 @@ input{
     border: none;
     outline: none;
     height: 10%;
-    font-size: 2em;
+    font-size: 1.5em;
     color: white;
     text-align: right;
 }
@@ -35,5 +35,73 @@ input{
     background-color:rgb(59,70,100) ;
 }
 .h2,.h1{
-    font-size: 1.5em;
+    font-size: 1.2em;
+    font-weight: 200;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
+.opcion{
+    color: white;
+}
+.border{
+    height: 30px;
+    width: 30px;
+
+}
+.dox-text{
+    padding-left: 10px;
+    font-size: 1.8em;
+    font-weight: 500;
+
+}
+.mr{
+    margin-right: 5px;
+}
+.dox-text{
+    padding-left: 5px;
+    color: white;
+}
+.box-main-opt{
+    height: 80px ;
+    padding-top: 10px;
+}
+.style-borde{
+    border-radius: 7px 0 0 7px;
+    border: 1px solid transparent;
+    border-right:none;
+    
+}
+.style-borde-2{
+    border: 1px solid transparent;
+    border-left: none;
+    border-right:none;
+   
+    
+}
+.style-borde-3{
+    border: 1px solid transparent;
+    border-radius: 0 7px 7px 0;
+    border-left: none;
+    
+    
+}
+.bg-dorado{
+    background-color: #99FCF7;
+}
+.brc,.brc2,.brc3{
+    background-color: #252D44;
+    height: 20px;
+    width: 20px;
+}
+.move-right:hover {
+    
+    transition: mover 5s linear; /* Añade una transición para el efecto */
+}
+@keyframes mover{
+    0%{
+        transform: rotateX(0%);
+    }
+    100%{
+        transform: rotateX(100%);
+    }
 }
