--- a/Juegos/css/dino.css
+++ b/Juegos/css/dino.css
@@ -22,20 +22,21 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../img/descierto.jpg'); /* Añade la ruta de tu imagen de fondo aquí */
+    background-image: url('../img/descierto.jpg'); 
     background-repeat: repeat-x;
     background-position: 0 0;
 }
 
 .dino {
+    width: 10px;
     position: absolute;
     bottom: 0;
     top: 85px;
     left: 50px;
-    width: 100%;
-
+ /*    width: 100%; */
+background-color: black;
     height: 98px;    
-   background-image: url('../img/dino13.gif');
+/*    background-image: url('../img/dino13.gif'); */
    background-repeat: no-repeat;
 }
 .dino2{
@@ -44,12 +45,33 @@ body {
     top: 85px;
     left: 50px;
     width: 100%;
-
     height: 98px;    
-   background-image: url('../img/dinoStop2.0.png');
-   background-repeat: no-repeat;
+    background-image: url('../img/dinoStop3.0.png');
+    background-repeat: no-repeat;
+    background-position: 0 0;
 }
 
+.trampa{
+    position: absolute;
+    bottom: 0;
+    right: 20%;
+    width: 4%;
+    height: 50px;
+    background-color: #224628;
+    border-radius: 150%;
+   
+}
+
+@keyframes movertrampa {
+    0%{
+        right: 0%;
+    }
+    100%{
+        right: 100%;
+    }
+
+    
+}
 .ground {
     position: absolute;
     bottom: 0;
@@ -57,6 +79,7 @@ body {
     width: 100%;
     height: 20px;
     background-color: #795548;
+    box-shadow: 2px 2px 15px black;
 }
 
 .jumping {
@@ -68,7 +91,7 @@ body {
         top: 85px;
     }
     50% {
-        top: 20px;
+        top: -120px;
         left: 60px;
     }
 }
