--- a/css/barra_progreso.css
+++ b/css/barra_progreso.css
@@ -1,31 +1,51 @@
-*{
-    margin: 0;
-    padding: 0;
-   
-    font-family: 'open Sans', sans-serif;
+#graficos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: auto;
+    width: 50%;
+    height: 50vh;
+    background: linear-gradient(45deg, gray, black);;
+    border-radius: 7px;
+    padding: 5px;
 }
-#titulo{
-    text-align: center;
-    color: white;
-    text-transform: uppercase;
-    font-size: 2em;
+
+.barras{
+    width: 80%;
+    height: 40px;
+    background-color: white;
+    border-radius: 7px;
+    margin: 15px;
 }
+span{
+    padding-left: 20px;
+    font-size: 1.5em;
+}
+.boxBarra{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 body{
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 92vh; 
-    width: 100%;
+    max-width: 100%;
     background: #111;
     /*  */
 }
 .square{
     position: relative;
-    width: 450px;
-    height: 450px;
+    width: 520px;
+    height: 520px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: auto;
    
 }
 .square i{
@@ -69,7 +89,7 @@ body{
 .validation{
     position: absolute;
     width: 300px;
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,47 +104,44 @@ form{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
+    
 } 
 input{
     padding: 4px 10px;
-    border-radius: 40px;
+    border-radius: 7px;
     font-size: 1.2em;
     color: rgb(37, 37, 37);
     width: 100%;
     /* background: transparent; */
     box-shadow: none;
     outline: none;
-} 
-
-.validation h2{
-    font-size: 1.2;
-    color: #fff;
-}
-.boton{
-    width: 100%;
-    padding: 12px 20px;
-    border-radius: 40px;
-    font-size: 1.2em;
-    color: #fff;
-   
-    background: linear-gradient(45deg,#ff350a,#fff172);
     border: none;
-    cursor: pointer;
+    border-bottom: 1px solid gray;
 }
-.boton:hover{
-    transition: width 0.5s linear;
-    width: 150px;
-   /*  animation: boton 0.5s linear; */
+.button{
+    width: 50%;
+    padding: 5px;
+    position: relative;
+    margin-top: 150%;
+    border-radius: 7px;
+    font-size: 1em;
+    background-color: grey;
+    color: white;
+    outline: none;
+    border: none;
 }
-@keyframes boton {
+.button:hover{
+    box-shadow: 0px 0px 20px rgb(128, 128, 235);
+    /* animation: colores 2s linear infinite; */
+}
+/* @keyframes colores {
     0%{
-        transform: rotateZ(0deg);
+        background-color: rgb(255, 247, 0);
+        color: black;
     }
-    50%{
-        transform:rotateZ(10deg);
-    }
+    
     100%{
-        transform: rotateZ(0deg);
+        background-color: rgb(187, 113, 113);
+        color: white;
     }
-}
+} */
