--- a/css/aprendizaje.css
+++ b/css/aprendizaje.css
@@ -139,6 +139,7 @@ p{
    font-size: 1.5em;
    font-family: 'Dancing Script', cursive;
     font-family: 'EB Garamond', serif;
+    letter-spacing: 2px;
 }
 span{
     font-size: 2em;
