--- a/css/barra_progreso.css
+++ b/css/barra_progreso.css
@@ -10,6 +10,27 @@
     border-radius: 7px;
     padding: 5px;
 }
+.boxTitulo{
+    width: max-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: white;
+}
+.boxCalificacion{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+.titulo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
 
 .barras{
     width: 80%;
